updated navmenu and footer styling. fixed sizing issue with abouticons, moved letter-spacing definition to global, from textContainer.

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -189,7 +189,6 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem 4rem;
     padding: 5px 0px 5px 0px;
-    font-size: 45px;
 }
 
 /* swap grid to mobile format */
