--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -55,11 +55,11 @@
 
 /* 
     generic styles     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    separate for organization and if I decide specific styling is necessary 
 */
 .textContainer{
     display: flex;
     justify-content: center;
-    letter-spacing: 0.01em;
 }
 
 .linkContainer{
@@ -145,12 +145,15 @@
 .menuContainer{
     background-color: rgb(187, 187, 187);
     display: none;
+    margin: 0rem 0rem 5rem 0rem;
 }
 
 .menuButton{
     background-color: orange;
     width: fit-content;
     height: 55px;
+    margin: 2rem 1rem 1rem 1.5rem;
+    border-radius: 0px;
 }
 
 .menuContentBox{
@@ -159,11 +162,17 @@
 
 .menuContent{
     background-color: green;
+    margin: 1rem;
 }
 
 .menuLink{
     background-color: rgb(21, 255, 0);
-    
+    margin: 0.5rem 0rem 0.5rem 0rem;
+}
+
+.menuLink a{
+    background-color: black;
+    font-size: 1.9rem;
 }
 
 
@@ -180,7 +189,7 @@
 
 .footContainer p {
     background-color: brown;
-    margin: 0rem 0rem 0.75rem 0rem;
+    margin: 0.75rem 0rem 0.75rem 0rem;
 }
 
 .footPagesBox{
@@ -193,7 +202,7 @@
     background-color: rgb(204, 255, 0);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding: 5px;
+    margin: 0.75rem 0rem 0.75rem 0rem;
     gap: 2.5rem;
 }
 
@@ -206,7 +215,7 @@
 
 .footLink{
     /* background-color: inherit; */
-    background-color: rgb(211, 136, 136);
+    background-color: rgb(0, 0, 0);
     text-align: center;
     font-size: 1.15rem;
 }
@@ -222,7 +231,7 @@
     display: grid;
     grid-template-columns: repeat(3, auto);
     gap: 2rem;
-    padding: 5px;
+    margin: 0.75rem 0rem 0.75rem 0rem;
 }
 
 .footContact a{
